added http to ajax call

--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
             var wix_apikey = '1315e866-8547-8b48-9168-30362eb12693';
 
             $.ajax({
-                url: 'dakwak.com/api/users/is_wix.json',
+                url: 'http://dakwak.com/api/users/is_wix.json',
                 type: 'POST',
                 dataType: 'json',
                 data: {uid: Wix.Utils.getUid(), apikey: wix_apikey},
