--- a/settings.html
+++ b/settings.html
@@ -13,26 +13,26 @@
     <script type="text/javascript">
         $(document).ready(function(){
 
-            var wix_apikey = '520c7e7b0746b95a920000ea520c7e7b0746b95a920000eb';
-
-            $.ajax({
-                url: 'https://dakwak.com/api/users/is_wix.json',
-                type: 'POST',
-                dataType: 'json',
-                data: {uid: Wix.Utils.getUid()},
-                success: function(data) {
-                    //alert(data.toSource());
-                },
-
-                error: function (xhr, ajaxOptions, thrownError) {
-                    //alert(xhr.toSource());
-                }
-            });
-
             Wix.getSiteInfo( function(siteInfo) {
                 if(siteInfo.baseUrl != '') {
                     $('#url').val(siteInfo.baseUrl);
                     $('#from_lang').val(Wix.Utils.getLocale());
+
+                    $.ajax({
+                        url: 'https://f3.f.us.dakwak.com/api/users/is_wix.json',
+                        type: 'POST',
+                        dataType: 'json',
+                        data: {uid: Wix.Utils.getUid(), url: siteInfo.baseUrl},
+                        success: function(data) {
+                            alert(data);
+                        },
+
+                        error: function (xhr, ajaxOptions, thrownError) {
+                            alert(xhr);
+                        }
+                    });
+
+
                 } else {
                     alert('Your Wix website needs to be published, so it can have a valid URL. Please set your URL then enable Dakwak.');
                 }
