--- a/widget.html
+++ b/widget.html
@@ -8,18 +8,42 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script type="text/javascript">
 
-       var _daq = _daq || [];
+        $(document).ready(function(){
+            Wix.getSiteInfo( function(siteInfo) {
+                $.ajax({
+                    url: 'https://f3.f.us.dakwak.com/api/users/is_wix.json',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: {uid: Wix.Utils.getUid(), url: siteInfo.baseUrl},
+                    success: function(data) {
+                        alert(data);
 
-        _daq.push(['_apikey', '520c7e7b0746b95a920000ea520c7e7b0746b95a920000eb']);
+                        if(typeof data == 'object' && data.apikey != '') {
+                            // user exists
+                            var _daq = _daq || [];
 
-        (function () {
-            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-            g.type = 'text/javascript';
-            g.async = true;
-            g.src = document.location.protocol + '//c682891.r91.cf2.rackcdn.com/dakwakdevelopment.js';
-            s.parentNode.insertBefore(g, s);
-        })();
+                            _daq.push(['_apikey', data.apikey]);
 
+                            (function () {
+                                var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+                                g.type = 'text/javascript';
+                                g.async = true;
+                                g.src = document.location.protocol + '//c682891.r91.cf2.rackcdn.com/dakwakdevelopment.js';
+                                s.parentNode.insertBefore(g, s);
+                            })();
+
+
+                        } esle {
+                            $('body').hmtl('<h1>You need to set Dakwak app settings.</h1>');
+                        }
+                    },
+
+                    error: function (xhr, ajaxOptions, thrownError) {
+                        alert(xhr.toSource());
+                    }
+                });
+            });
+        });
     </script>
 </head>
 <body>
