--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
                                 // user exists
                                 $('#settings-form input, #settings-form select').attr('disabled', 'disabled');
 
-                            } esle {
+                            } else {
                                 // new user
                             }
                         },
