--- a/widget.html
+++ b/widget.html
@@ -33,7 +33,7 @@
                             })();
 
 
-                        } esle {
+                        } else {
                             $('body').hmtl('<h1>You need to set Dakwak app settings.</h1>');
                         }
                     },
