modified http url

--- a/settings.html
+++ b/settings.html
@@ -19,7 +19,7 @@
                     $('#from_lang').val(Wix.Utils.getLocale());
 
                     $.ajax({
-                        url: 'https://f3.f.us.dakwak.com/api/users/is_wix.json',
+                        url: 'https://dakwak.com/api/users/is_wix.json',
                         type: 'POST',
                         dataType: 'json',
                         data: {uid: Wix.Utils.getUid(), url: siteInfo.baseUrl},
