added return flase to form submit

--- a/settings.html
+++ b/settings.html
@@ -68,6 +68,8 @@
                         alert(xhr.toSource());
                     }
                 });
+
+                return false;
             });
         });
 
