--- a/widget.html
+++ b/widget.html
@@ -15,7 +15,7 @@
 
             Wix.getSiteInfo( function(siteInfo) {
                 $.ajax({
-                    url: 'https://dakwak.com/api/users/is_wix.json',
+                    url: 'http://stage1.us.dakwak.com:8189/api/users/is_wix.json',
                     type: 'POST',
                     dataType: 'json',
                     data: {uid: Wix.Utils.getUid(), url: siteInfo.baseUrl, app: 'wix', instance: instance},
