--- a/settings.html
+++ b/settings.html
@@ -37,7 +37,7 @@
                         },
 
                         error: function (xhr, ajaxOptions, thrownError) {
-
+                            $.('.message').html('<div class="alert alert-error">' + xhr.reponseText + '</div>"');
                         }
                     });
 
@@ -62,11 +62,12 @@
                     dataType: 'json',
                     data: {uid: uid, email: email, url: url, from_lang: from_lang, to_lang: to_lang,  app: 'wix', instance: instance},
                     success: function(data) {
-                        alert(data);
+                        $.('.message').html('<div class="alert alert-success">Thank you! Dakwak should be activated on your website.</div>"');
+                        Wix.Settings.refreshApp();
                     },
 
                     error: function (xhr, ajaxOptions, thrownError) {
-                        alert(xhr.toSource());
+                        $.('.message').html('<div class="alert alert-error">' + xhr.reponseText + '</div>"');
                     }
                 });
 
@@ -86,6 +87,8 @@
 <img src="images/logo.png" class="img-thumbnail" style="margin: 5px"/>
 <h4>Dakwak Settings</h4>
 <form id="settings-form" action="" >
+
+    <div class="message"></div>
 
     <div class="form-group">
         <label>E-mail:</label>
