removed extra quotation

--- a/settings.html
+++ b/settings.html
@@ -32,7 +32,7 @@
                                 $('#settings-form input, #settings-form select').attr('disabled', 'disabled');
 
                             } else {
-                                $('.message').html('<div class="alert alert-success">Dakwak is already activated. Your API key is: ' + data.website_apikey + '</div>"');
+                                $('.message').html('<div class="alert alert-success">Dakwak is already activated. Your API key is: ' + data.website_apikey + '</div>');
                             }
                         },
 
