modified dakwak class

--- a/widget.html
+++ b/widget.html
@@ -9,6 +9,7 @@
     <script src="js/dakwak.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function(){
+            var dakwak = new Dakwak();
             dakwak.init();
             dakwak.renderWidget();
         });
