--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,8 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
+            var dakwak = new Dakwak();
+            
             dakwak.init();
             dakwak.refreshSettings();
 
