moved dakwak widget daq variable

--- a/widget.html
+++ b/widget.html
@@ -9,6 +9,8 @@
     <script src="js/dakwak.js" type="text/javascript"></script>
     <script type="text/javascript">
 
+        _daq = window._daq || [];
+        
         $(document).ready(function(){
             var dakwak = new Dakwak();
             dakwak.init();
