added var keyword

--- a/widget.html
+++ b/widget.html
@@ -9,7 +9,7 @@
     <script src="js/dakwak.js" type="text/javascript"></script>
     <script type="text/javascript">
 
-        _daq = _daq || [];
+        var _daq = _daq || [];
 
         $(document).ready(function(){
             var dakwak = new Dakwak();
