modified app added page variable

--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
         $(document).ready(function(){
             var dakwak = new Dakwak();
 
-            dakwak.init();
+            dakwak.init('settings');
             dakwak.refreshSettings();
 
             $('#settings-form').submit(function() {
