--- a/widget.html
+++ b/widget.html
@@ -10,8 +10,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             var dakwak = new Dakwak();
-            dakwak.init();
-            dakwak.renderWidget();
+            dakwak.init('widget');
         });
     </script>
 </head>
