moved daq variable

--- a/settings.html
+++ b/settings.html
@@ -13,6 +13,8 @@
 
     <script type="text/javascript">
 
+        var _daq = _daq || [];
+        
         $(document).ready(function(){
             var dakwak = new Dakwak();
 
