moved daq again

--- a/widget.html
+++ b/widget.html
@@ -8,6 +8,10 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/dakwak.js" type="text/javascript"></script>
     <script type="text/javascript">
+
+        var _daq = _daq || [];
+
+
         $(document).ready(function(){
             var dakwak = new Dakwak();
             dakwak.init('widget');
