--- a/widget.html
+++ b/widget.html
@@ -13,8 +13,8 @@
 
 
         $(document).ready(function(){
-            var dakwak = new Dakwak();
-            dakwak.init('widget');
+            var dakwakWix = new DakwakWix();
+            dakwakWix.init('widget');
         });
     </script>
 </head>
