changed waiting text to alert

--- a/widget.html
+++ b/widget.html
@@ -19,6 +19,6 @@
     </script>
 </head>
 <body>
-<h3 style="background: #000; color:#eee;">Dakwak should be loaded shortly. Once it's activated in the settings.</h3>
+<div class="alert alert-information">Dakwak should be loaded shortly. Once it's activated in the settings.</div>
 </body>
 </html>
