--- a/widget.html
+++ b/widget.html
@@ -20,7 +20,7 @@
         });
     </script>
 
-    <style type="text/css>">
+    <style>
         .alert-warning {
             background-color: #FCF8E3;
             border-color: #FBEED5;
