modified text message

--- a/widget.html
+++ b/widget.html
@@ -35,6 +35,6 @@
     </style>
 </head>
 <body>
-<div class="alert alert-warning">Dakwak should be loaded shortly. Once it's activated in the settings.</div>
+<div class="alert alert-warning">Dakwak should be loaded shortly once it's activated in the settings.</div>
 </body>
 </html>
