added link domain

--- a/settings.html
+++ b/settings.html
@@ -54,6 +54,8 @@
     </div>
     <div class="form-group">
         <input type="submit" name="submit" value="Activate Dakwak" class="btn btn-default btn-success">
+
+        <a href="https://dakwak.desk.com/customer/portal/articles/1279578-how-do-i-link-my-domain-name-to-my-translated-website-" target="_blank">How to link your domain?</a>
     </div>
 
 </form>
