--- a/settings.html
+++ b/settings.html
@@ -18,7 +18,11 @@
             dakwakWix.init('settings');
 
             $('#settings-form').submit(function() {
-                dakwakWix.newUser();
+                if(dakwakWix.userExists == true) {
+                    dakwakWix.updateUserSettings();
+                } else {
+                    dakwakWix.newUser();
+                }
                 return false;
             });
         });
@@ -53,7 +57,7 @@
         </select>
     </div>
     <div class="form-group">
-        <input type="submit" name="submit" value="Activate Dakwak" class="btn btn-default btn-success">
+        <input type="submit" id="submit" name="submit" value="Activate Dakwak" class="btn btn-default btn-success">
 
         <a href="https://dakwak.desk.com/customer/portal/articles/1279578-how-do-i-link-my-domain-name-to-my-translated-website-" target="_blank">How to link your domain?</a>
     </div>
