--- a/settings.html
+++ b/settings.html
@@ -1,14 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Dakwak Settings Endpoint</title>
+    <title>Dakwak Settings &bull; Wix</title>
+	<link type="text/css" href="stylesheets/css/bootstrap.min.css" rel="stylesheet">
+	<link type="text/css" href="stylesheets/css/common.css" rel="stylesheet">
+	<link type="text/css" href="stylesheets/css/buttons.css" rel="stylesheet">
+	<link type="text/css" href="stylesheets/css/settings.css" rel="stylesheet">
+	<link type="text/css" href="javascripts/components/color-picker/css/color-picker.css" rel="stylesheet"/>
+	<link type="text/css" href="javascripts/components/glued-position-min/glued.min.css" rel="stylesheet"/>
 
-    <link href="css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
 
-    <script type="text/javascript" src="//sslstatic.wix.com/services/js-sdk/1.16.0/js/Wix.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/dakwak.js" type="text/javascript"></script>
 
     <script type="text/javascript">
@@ -29,39 +30,104 @@
     </script>
 </head>
 <body>
-<img src="images/logo.png" class="img-thumbnail" style="margin: 5px"/>
-<h4>Dakwak Settings</h4>
-<form id="settings-form" action="" >
 
-    <div class="message"></div>
+<header class="intro box">
+    <div class="title">
+        <!-- App Logo with native CSS3 gloss -->
+        <div class="icon">
+            <div class="logo">
+                <span class="gloss"></span>
+            </div>
+        </div>
 
-    <div class="form-group">
-        <label>E-mail:</label>
-        <input class="form-control" id="email" type="text" name="email" />
-    </div>
-    <div class="form-group">
-        <label>Website URL:</label>
-        <input class="form-control" id="url" type="text" name="url" />
-    </div>
-    <div class="form-group">
-        <label>Original language:</label>
-        <select class="form-control" id="from_lang" name="from_lang">
-            <option value="af">Afrikaans</option><option value="el">Greek</option><option value="ro">Romanian</option><option value="sq">Albanian</option><option value="iw">Hebrew</option><option value="ru">Russian</option><option value="ar">Arabic</option><option value="hi">Hindi</option><option value="sr">Serbian</option><option value="be">Belarusian</option><option value="hu">Hungarian</option><option value="sk">Slovak</option><option value="bg">Bulgarian</option><option value="is">Icelandic</option><option value="sl">Slovenian</option><option value="ca">Catalan</option><option value="id">Indonesian</option><option value="es">Spanish</option><option value="zh-CN">Chinese (Simplified)</option><option value="ga">Irish</option><option value="sw">Swahili</option><option value="hr">Croatian</option><option value="it">Italian</option><option value="sv">Swedish</option><option value="cs">Czech</option><option value="ja">Japanese</option><option value="th">Thai</option><option value="da">Danish</option><option value="ko">Korean</option><option value="tr">Turkish</option><option value="nl">Dutch</option><option value="lv">Latvian</option><option value="uk">Ukrainian</option><option value="en">English</option><option value="lt">Lithuanian</option><option value="vi">Vietnamese</option><option value="et">Estonian</option><option value="mk">Macedonian</option><option value="cy">Welsh</option><option value="tl">Filipino</option><option value="ms">Malay</option><option value="yi">Yiddish</option><option value="fi">Finnish</option><option value="mt">Maltese</option><option value="ur">Urdu</option><option value="fr">French</option><option value="fa">Persian</option><option value="zh-TW">Chinese (Traditional)</option><option value="gl">Galician</option><option value="pl">Polish</option><option value="fr-CA">French (Canada)</option><option value="de">German</option><option value="pt-PT">Portuguese (Europe)</option><option value="es-LA">Spanish (Latin America)</option><option value="pt-BR">Portuguese (Brazil)</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label>Target language:</label>
-        <select class="form-control"  id="to_lang" name="to_lang" multiple="multiple">
-            <option value=""> - None -</option>
-            <option value="af">Afrikaans</option><option value="el">Greek</option><option value="ro">Romanian</option><option value="sq">Albanian</option><option value="iw">Hebrew</option><option value="ru">Russian</option><option value="ar">Arabic</option><option value="hi">Hindi</option><option value="sr">Serbian</option><option value="be">Belarusian</option><option value="hu">Hungarian</option><option value="sk">Slovak</option><option value="bg">Bulgarian</option><option value="is">Icelandic</option><option value="sl">Slovenian</option><option value="ca">Catalan</option><option value="id">Indonesian</option><option value="es">Spanish</option><option value="zh-CN">Chinese (Simplified)</option><option value="ga">Irish</option><option value="sw">Swahili</option><option value="hr">Croatian</option><option value="it">Italian</option><option value="sv">Swedish</option><option value="cs">Czech</option><option value="ja">Japanese</option><option value="th">Thai</option><option value="da">Danish</option><option value="ko">Korean</option><option value="tr">Turkish</option><option value="nl">Dutch</option><option value="lv">Latvian</option><option value="uk">Ukrainian</option><option value="en">English</option><option value="lt">Lithuanian</option><option value="vi">Vietnamese</option><option value="et">Estonian</option><option value="mk">Macedonian</option><option value="cy">Welsh</option><option value="tl">Filipino</option><option value="ms">Malay</option><option value="yi">Yiddish</option><option value="fi">Finnish</option><option value="mt">Maltese</option><option value="ur">Urdu</option><option value="fr">French</option><option value="fa">Persian</option><option value="zh-TW">Chinese (Traditional)</option><option value="gl">Galician</option><option value="pl">Polish</option><option value="fr-CA">French (Canada)</option><option value="de">German</option><option value="pt-PT">Portuguese (Europe)</option><option value="es-LA">Spanish (Latin America)</option><option value="pt-BR">Portuguese (Brazil)</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <input type="submit" id="submit" name="submit" value="Activate Dakwak" class="btn btn-default btn-success">
-
-        <a href="https://dakwak.desk.com/customer/portal/articles/1279578-how-do-i-link-my-domain-name-to-my-translated-website-" target="_blank">How to link your domain?</a>
+        <!-- This divider is a must according to the Wix design requirements -->
+        <div class="divider"></div>
     </div>
 
-</form>
+    <!-- Connect account area -->
+    <div class="login">
+        <div class="guest">
+            <div class="description">
+                <p>
+                   <a href="http://dakwak.com" target="_blank">Dakwak.com</a> is a website translation and localization technology that helps businesses in going global by having up and running translated versions of their website with no technical involvement. Translation quality is user-controlled through dakwak’s multi-layered translation system offering machine, team, and professional translation.
+                </p>
+            </div>
+
+            <div class="login-panel">
+                <p class="create-account">Don't have an<br/>account? <a href="#"><strong>Create one</strong></a></p>
+                <button class="submit btn connect">Connect account</button>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- Settings box -->
+<div class="accordion">
+
+    <div class="box">
+        <h3>Dakwak account settings:</h3>
+        <form id="settings-form" action="" >
+
+            <div class="message"></div>
+
+            <div class="form-group">
+                <label>E-mail:</label>
+                <input class="form-control" id="email" type="text" name="email" />
+            </div>
+            <div class="form-group">
+                <label>Website URL:</label>
+                <input class="form-control" id="url" type="text" name="url" />
+            </div>
+            <div class="form-group">
+                <label>Original language:</label>
+                <select class="form-control" id="from_lang" name="from_lang">
+                    <option value="af">Afrikaans</option><option value="el">Greek</option><option value="ro">Romanian</option><option value="sq">Albanian</option><option value="iw">Hebrew</option><option value="ru">Russian</option><option value="ar">Arabic</option><option value="hi">Hindi</option><option value="sr">Serbian</option><option value="be">Belarusian</option><option value="hu">Hungarian</option><option value="sk">Slovak</option><option value="bg">Bulgarian</option><option value="is">Icelandic</option><option value="sl">Slovenian</option><option value="ca">Catalan</option><option value="id">Indonesian</option><option value="es">Spanish</option><option value="zh-CN">Chinese (Simplified)</option><option value="ga">Irish</option><option value="sw">Swahili</option><option value="hr">Croatian</option><option value="it">Italian</option><option value="sv">Swedish</option><option value="cs">Czech</option><option value="ja">Japanese</option><option value="th">Thai</option><option value="da">Danish</option><option value="ko">Korean</option><option value="tr">Turkish</option><option value="nl">Dutch</option><option value="lv">Latvian</option><option value="uk">Ukrainian</option><option value="en">English</option><option value="lt">Lithuanian</option><option value="vi">Vietnamese</option><option value="et">Estonian</option><option value="mk">Macedonian</option><option value="cy">Welsh</option><option value="tl">Filipino</option><option value="ms">Malay</option><option value="yi">Yiddish</option><option value="fi">Finnish</option><option value="mt">Maltese</option><option value="ur">Urdu</option><option value="fr">French</option><option value="fa">Persian</option><option value="zh-TW">Chinese (Traditional)</option><option value="gl">Galician</option><option value="pl">Polish</option><option value="fr-CA">French (Canada)</option><option value="de">German</option><option value="pt-PT">Portuguese (Europe)</option><option value="es-LA">Spanish (Latin America)</option><option value="pt-BR">Portuguese (Brazil)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Target language:</label>
+                <select class="form-control"  id="to_lang" name="to_lang" multiple="multiple">
+                    <option value=""> - None -</option>
+                    <option value="af">Afrikaans</option><option value="el">Greek</option><option value="ro">Romanian</option><option value="sq">Albanian</option><option value="iw">Hebrew</option><option value="ru">Russian</option><option value="ar">Arabic</option><option value="hi">Hindi</option><option value="sr">Serbian</option><option value="be">Belarusian</option><option value="hu">Hungarian</option><option value="sk">Slovak</option><option value="bg">Bulgarian</option><option value="is">Icelandic</option><option value="sl">Slovenian</option><option value="ca">Catalan</option><option value="id">Indonesian</option><option value="es">Spanish</option><option value="zh-CN">Chinese (Simplified)</option><option value="ga">Irish</option><option value="sw">Swahili</option><option value="hr">Croatian</option><option value="it">Italian</option><option value="sv">Swedish</option><option value="cs">Czech</option><option value="ja">Japanese</option><option value="th">Thai</option><option value="da">Danish</option><option value="ko">Korean</option><option value="tr">Turkish</option><option value="nl">Dutch</option><option value="lv">Latvian</option><option value="uk">Ukrainian</option><option value="en">English</option><option value="lt">Lithuanian</option><option value="vi">Vietnamese</option><option value="et">Estonian</option><option value="mk">Macedonian</option><option value="cy">Welsh</option><option value="tl">Filipino</option><option value="ms">Malay</option><option value="yi">Yiddish</option><option value="fi">Finnish</option><option value="mt">Maltese</option><option value="ur">Urdu</option><option value="fr">French</option><option value="fa">Persian</option><option value="zh-TW">Chinese (Traditional)</option><option value="gl">Galician</option><option value="pl">Polish</option><option value="fr-CA">French (Canada)</option><option value="de">German</option><option value="pt-PT">Portuguese (Europe)</option><option value="es-LA">Spanish (Latin America)</option><option value="pt-BR">Portuguese (Brazil)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <input type="submit" id="submit" name="submit" value="Activate Dakwak" class="btn btn-default btn-success">
+
+                <a href="https://dakwak.desk.com/customer/portal/articles/1279578-how-do-i-link-my-domain-name-to-my-translated-website-" target="_blank">How to link your domain?</a>
+            </div>
+
+        </form>
+    </div>
+</div>  
+
+
+<!-- Wix SDK -->
+<script type="text/javascript" src="//sslstatic.wix.com/services/js-sdk/1.19.0/js/Wix.js"></script>
+
+<!-- jQuery; needed for Wix Plugins -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+<!-- Twitter Bootstrap components;
+     include this to utilize the Color Pickers, based on Tooltip and Popover -->
+<script type="text/javascript" src="javascripts/bootstrap/bootstrap-tooltip.js"></script>
+<script type="text/javascript" src="javascripts/bootstrap/bootstrap-popover.js"></script>
+
+<!-- Wix UI Components -->
+<script type="text/javascript" src="javascripts/components/accordion/accordion.js"></script>
+<script type="text/javascript" src="javascripts/components/checkbox/checkbox.js"></script>
+<script type="text/javascript" src="javascripts/components/radio-button/radio-button.js"></script>
+<script type="text/javascript" src="javascripts/components/slider/slider.js"></script>
+<script type="text/javascript" src="javascripts/components/color-picker/color-pickers/simple.js"></script>
+<script type="text/javascript" src="javascripts/components/color-picker/color-pickers/advanced.js"></script>
+<script type="text/javascript" src="javascripts/components/color-picker/color-picker.js"></script>
+
+<!-- Settings Glued Logic -->
+<script type="text/javascript" src="javascripts/components/glued-position-min/glued.min.js"></script>
+
+<!-- Settings View Logic -->
+<script type="text/javascript" src="javascripts/views/settings.js"></script>
+
 </body>
 </html>
+
