added new wix ui library files

--- a/settings.html
+++ b/settings.html
@@ -49,7 +49,7 @@
         <div class="guest">
             <div class="description">
                 <p>
-                   <a href="http://dakwak.com" target="_blank">Dakwak.com</a> is a website translation and localization technology that helps businesses in going global by having up and running translated versions of their website with no technical involvement. Translation quality is user-controlled through dakwak’s multi-layered translation system offering machine, team, and professional translation.
+                   <a href="http://dakwak.com" target="_blank">Dakwak.com</a> is a website translation and localization technology that helps businesses in going global by having up and running translated versions of their website with no technical involvement. Translation quality is user-controlled through dakwak's multi-layered translation system offering machine, team, and professional translation.
                 </p>
             </div>
 
