--- a/settings.html
+++ b/settings.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-<header class="intro box">
+<header class="intro box" style="position: relative">
     <div class="title">
         <!-- App Logo with native CSS3 gloss -->
         <div class="icon">
@@ -51,7 +51,7 @@
         <div class="guest">
             <div class="description">
                 <p>
-                   <a href="http://dakwak.com" target="_blank">Dakwak.com</a> is a website translation and localization technology that helps businesses in going global by having up and running translated versions of their website with no technical involvement. Translation quality is user-controlled through dakwak's multi-layered translation system offering machine, team, and professional translation.
+                   <a href="http://dakwak.com" target="_blank">Dakwak.com</a> is a website translation and localization technology that helps businesses in going global by having up and running translated versions of their website with no technical involvement. Translation quality is user-controlled through dakwak's multi-layered translation system offering machine, team, and professional translation. <a target="_blank" style="position: absolute; bottom:10px; right:10px;" class="btn btn-success btn-mini" href="https://dakwak.com/pricing">Upgrade this app</a>
                 </p>
             </div>
         </div>
