removed plans for now

--- a/settings.html
+++ b/settings.html
@@ -62,7 +62,7 @@
 <div class="accordion">
 
     <div class="box">
-        <h3>Dakwak account settings:</h3>
+        <h3>Dakwak localization settings:</h3>
         <form id="settings-form" action="" >
 
             <div class="message"></div>
